Addressed comments.
Switched to Spark 2.
Added spark1.patch for building against Spark 1.